--- a/StarterHubFrontEnd/src/Components/RegisterUserProperties.module.css
+++ b/StarterHubFrontEnd/src/Components/RegisterUserProperties.module.css
@@ -1,3 +1,61 @@
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.registerContainer {
+    background-color: #444654;
+    gap: 1.7rem;
+    display: flex;
+    flex-direction: column; 
+    align-items: stretch;  
+    justify-content: flex-start;
+    align-items: center;
+    height: 90%;
+    width: 32rem;
+    max-height: 100%;
+    overflow-y: auto;
+    padding: 1rem;
+    box-sizing: border-box;
+    scrollbar-width: thin;
+    scrollbar-color: #444654 #343541;
+    background-color: #343541;
+    border: solid #444654 2px;
+    border-radius: 10px;
+}
+
+
+.registerContainer::-webkit-scrollbar {
+    width: 8px;
+    background-color: #343541; 
+    border-radius: 5px;
+}
+
+.registerContainer::-webkit-scrollbar-thumb {
+    background-color: #444654; 
+    border-radius: 5px;
+    border: 2px solid #343541; 
+}
+
+.registerContainer::-webkit-scrollbar-track {
+    background-color: #343541; 
+    border-radius: 5px;
+}
+
+.registerContainer div{
+    display: flex;
+    flex-direction: column;
+}
+
+.registerContainer label{
+    padding-left: 0.7rem;
+}
+.registerContainer input{
+    padding-left: 0.7rem;
+}
+
 textarea{
     background-color: #343541;
     color: #E7E7E8;
@@ -50,4 +108,26 @@ textarea{
 .buttonsDiv{
     display: flex;
     flex-direction: row !important;
+}
+
+.buttonDiv input{
+    width: 8rem;
+    font-size: 17px;
+    padding-left: 0;
+}
+
+.buttonDiv input {
+    width: 8rem;
+    font-size: 17px;
+    padding-left: 0;
+    background-color: #343541; 
+    color: #E7E7E8; 
+    border: 2px solid #444654; 
+    border-radius: 25px; 
+    transition: background-color 0.2s ease;
+}
+
+.buttonDiv input:hover {
+    background-color: #1a1a1f; 
+    border-color: #1a1a1f; 
 }
